--- a/hal/android.hardware.usb.gadget-service.qti.rc
+++ b/hal/android.hardware.usb.gadget-service.qti.rc
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: BSD-3-Clause-Clear
 
 service vendor.usbgadget-hal /vendor/bin/hw/android.hardware.usb.gadget-service.qti
+    interface aidl android.hardware.usb.gadget.IUsbGadget/default
     class hal
     user system
     group system mtp usb
