--- a/etc/init.qcom.usb.rc
+++ b/etc/init.qcom.usb.rc
@@ -166,6 +166,7 @@ on zygote-start
     write /config/usb_gadget/g1/functions/rndis.rndis/class "ef"
     write /config/usb_gadget/g1/functions/rndis.rndis/subclass 4
     write /config/usb_gadget/g1/functions/rndis.rndis/protocol 1
+    write /config/usb_gadget/g1/functions/ncm.gs6/ifname ncm%d
     write /config/usb_gadget/g1/functions/ncm.gs6/os_desc/interface.ncm/compatible_id "WINNCM"
     write /config/usb_gadget/g1/functions/diag.diag/serial ${ro.serialno}
     mkdir /dev/usb-ffs 0775 shell system
